# openmm-hip

./: CMakeLists.txt  README.md
cmake_modules/: FindMMHIP.cmake
licenses/: MIT.txt
plugins/hipcompiler/: CMakeLists.txt
plugins/hipcompiler/include/internal/: windowsExportHipCompiler.h
plugins/hipcompiler/src/: HipCompilerKernelFactory.cpp  HipCompilerKernelFactory.h  HipCompilerKernels.cpp  HipCompilerKernels.h
plugins/hipcompiler/tests/: CMakeLists.txt  TestHipCompiler.cpp
recipe/: build.sh  conda_build_config.yaml  meta.yaml  run_test.sh  test_openmm_hip.sh
